fine tuned custom animation button // modal shop list click handler (navSource)

--- a/code/app/src/main/res/layout/fragment_details_shop.xml
+++ b/code/app/src/main/res/layout/fragment_details_shop.xml
@@ -437,7 +437,7 @@
                 app:defaultTitle="@string/floor_plan"
                 app:alternativeTitle="@string/floor_plan"
                 app:defaultColor="@color/secondaryLightColor"
-                app:alternativeColor="@color/primaryDarkColor"
+                app:alternativeColor="@color/secondaryDarkColor"
                 app:progressCircleColor="@color/colorAccent"
                 app:layout_constraintTop_toBottomOf="@id/clBusinessHours"
                 app:layout_constraintBottom_toBottomOf="parent"
