--- a/code/app/src/debug/res/values/colors.xml
+++ b/code/app/src/debug/res/values/colors.xml
@@ -18,5 +18,6 @@
   <color name="colorAccent">#D81B60</color>
   <color name="black">#000000</color>
   <color name="white">#ffffff</color>
+  <color name="blue">#1D73F3</color>
 
 </resources>
