--- a/code/app/src/main/res/layout/fragment_planning_product_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_product_edit.xml
@@ -168,7 +168,8 @@
                 app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/smobItemName" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
