shop detail layout with slightly larger margin (bottom)

--- a/code/app/src/main/res/layout/fragment_details_shop.xml
+++ b/code/app/src/main/res/layout/fragment_details_shop.xml
@@ -435,6 +435,7 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_margin="@dimen/margin_normal"
+                android:layout_marginBottom="@dimen/vertical_margin_small"
                 tools:background="@color/primaryColor"
                 app:defaultTitle="@string/floor_plan"
                 app:alternativeTitle="@string/floor_plan"
