Refactor administration --> admin // bugfix: logged-in userID no longer deleted upon activity navigation

--- a/code/app/src/main/res/navigation/nav_graph_administration.xml
+++ b/code/app/src/main/res/navigation/nav_graph_administration.xml
@@ -7,12 +7,12 @@
 
     <activity
         android:id="@+id/smobAdministrationActivity"
-        android:name="com.tanfra.shopmob.smob.ui.administration.SmobAdministrationActivity"
+        android:name="com.tanfra.shopmob.smob.ui.admin.SmobAdminActivity"
         android:label="Smob Administration Activity" />
 
     <fragment
         android:id="@+id/smobAdminSelectFragment"
-        android:name="com.tanfra.shopmob.smob.ui.administration.AdminSelectFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.AdminSelectFragment"
         android:label="Administration Selector">
     </fragment>
 
