--- a/code/app/src/main/res/layout/activity_auth.xml
+++ b/code/app/src/main/res/layout/activity_auth.xml
@@ -11,7 +11,7 @@
         android:background="@color/white"
         android:orientation="vertical"
         android:gravity="center"
-        tools:context=".smob.ui.authentication.SmobAuthenticationActivity">
+        tools:context=".smob.ui.auth.SmobAuthActivity">
 
         <ImageView
             android:id="@+id/icon"
