--- a/code/app/src/main/res/navigation/nav_graph_planning.xml
+++ b/code/app/src/main/res/navigation/nav_graph_planning.xml
@@ -16,7 +16,7 @@
     <!-- cross activity navigation made easy... -->
     <fragment
         android:id="@+id/smobAdminSelectFragment"
-        android:name="com.tanfra.shopmob.smob.ui.administration.AdminSelectFragment"
+        android:name="com.tanfra.shopmob.smob.ui.admin.AdminSelectFragment"
         android:label="Administration Selector"
         tools:layout="@layout/fragment_admin_select"
         >
