--- a/code/app/src/main/res/menu/navdrawer_menu.xml
+++ b/code/app/src/main/res/menu/navdrawer_menu.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/smobPlanningShopListFragment"
             android:icon="@drawable/ic_baseline_shopping_cart_24"
             android:title="@string/shop_list" />
+
+        <!-- using NavComponents to navigate to new activity (see 'planning' nav_graph) -->
         <item
-            android:id="@+id/smobAdminSelectFragment"
+            android:id="@+id/smobAdminActivity"
             android:icon="@drawable/ic_baseline_admin_panel_settings_24"
             android:title="@string/admin" />
+
     </group>
 </menu>
