Admin navigation completed (navdrawer, navbar) // profile picture loaded in admin/profile

--- a/code/app/src/main/res/layout/activity_planning.xml
+++ b/code/app/src/main/res/layout/activity_planning.xml
@@ -29,8 +29,8 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="start"
                     android:clipToPadding="false"
-                    app:menu="@menu/navdrawer_menu"
-                    app:headerLayout="@layout/nav_header"
+                    app:menu="@menu/navdrawer_planning_menu"
+                    app:headerLayout="@layout/nav_planning_header"
                     />
 
         </androidx.drawerlayout.widget.DrawerLayout>
