--- a/code/app/src/main/res/layout/activity_admin.xml
+++ b/code/app/src/main/res/layout/activity_admin.xml
@@ -4,11 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.drawerlayout.widget.DrawerLayout
+            android:id="@+id/drawerLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".smob.ui.admin.SmobAdminActivity">
+            tools:openDrawer="start"
+            tools:context=".smob.ui.planning.SmobAdminActivity"
+            >
 
+                <!-- note: the fragment container has to be the FIRST CHILD,
+                     or the drawer won't react to clicks on the menu items.
+                  -->
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/nav_host_fragment_admin"
                     android:name="androidx.navigation.fragment.NavHostFragment"
@@ -17,6 +23,16 @@
                     app:defaultNavHost="true"
                     app:navGraph="@navigation/nav_graph_admin" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.navigation.NavigationView
+                    android:id="@+id/navView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:clipToPadding="false"
+                    app:menu="@menu/navdrawer_admin_menu"
+                    app:headerLayout="@layout/nav_admin_header"
+                    />
+
+        </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
