--- a/code/app/src/main/res/layout/fragment_admin_profile.xml
+++ b/code/app/src/main/res/layout/fragment_admin_profile.xml
@@ -8,6 +8,9 @@
         <variable
             name="viewModel"
             type="com.tanfra.shopmob.smob.ui.admin.AdminViewModel" />
+        <variable
+            name="smobApp"
+            type="com.tanfra.shopmob.SmobApp" />
     </data>
 
     <ScrollView
@@ -31,12 +34,12 @@
                 android:layout_marginEnd="@dimen/horizontal_margin_small"
                 android:contentDescription="@string/adminProfileDescription"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_baseline_person_24"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/btProfile"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
+                app:profileImage="@{smobApp.Companion.currUser.imageUrl}"
                 tools:src="@drawable/ic_baseline_person_24"
                 />
 
