Refactoring - overall package structure, viewModels (part 1/2)

--- a/code/app/src/main/res/layout/fragment_admin_lists.xml
+++ b/code/app/src/main/res/layout/fragment_admin_lists.xml
@@ -21,6 +21,19 @@
             android:layout_height="wrap_content"
             android:background="@color/secondaryLightColor">
 
+            <!-- centered (red) progress bar, indicating the loading state when accessing the DB -->
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
             <ImageView
                 android:id="@+id/ivSmobAdminLists"
                 android:layout_width="0dp"
@@ -33,70 +46,49 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_baseline_view_list_24"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/btProfile"
+                app:layout_constraintBottom_toTopOf="@id/tvHeading"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 tools:src="@drawable/ic_baseline_view_list_24"
                 />
 
-            <Button
-                android:id="@+id/btProfile"
-                android:layout_width="@dimen/button_width"
+            <TextView
+                android:id="@+id/tvHeading"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
-                android:layout_marginBottom="@dimen/vertical_margin_small"
-                android:layout_marginStart="@dimen/horizontal_margin_small"
-                android:paddingStart="@dimen/button_padding"
-                android:paddingEnd="@dimen/button_padding"
-                android:text="@string/profile"
-                android:textColor="@color/swipeSecondaryLightColor"
-                android:textSize="@dimen/button_text_size"
-                android:textStyle="bold"
+                android:gravity="center"
+                android:text="@string/smob_shop_details"
+                android:textSize="@dimen/text_size_large"
                 app:layout_constraintTop_toBottomOf="@id/ivSmobAdminLists"
-                app:layout_constraintBottom_toTopOf="@id/btGroups"
+                app:layout_constraintBottom_toTopOf="@id/smobShopLists"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 />
 
-            <Button
-                android:id="@+id/btGroups"
-                android:layout_width="@dimen/button_width"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
-                android:layout_marginBottom="@dimen/vertical_margin_small"
-                android:layout_marginStart="@dimen/horizontal_margin_small"
-                android:paddingStart="@dimen/button_padding"
-                android:paddingEnd="@dimen/button_padding"
-                android:text="@string/groups"
-                android:textColor="@color/swipeSecondaryLightColor"
-                android:textSize="@dimen/button_text_size"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/btProfile"
-                app:layout_constraintBottom_toTopOf="@id/btLists"
-                app:layout_constraintStart_toStartOf="parent"
+            <Spinner
+                android:id="@+id/smobShopLists"
+                style="@style/Widget.AppCompat.Spinner"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/dropdownListPreferredItemHeight"
+                android:layout_margin="@dimen/margin_standard"
+                android:layout_marginStart="@dimen/horiz_margin_small"
+                android:layout_marginTop="@dimen/vert_margin_small"
+                android:layout_marginEnd="@dimen/horiz_margin_small"
+                android:prompt="@string/smob_item_mainCat"
+                android:background="@drawable/spinner_bg"
+                android:dropDownWidth="match_parent"
+                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
+                android:paddingEnd="14dp"
+                android:popupBackground="@drawable/spinner_bg"
+                android:popupElevation="3dp"
+                android:stateListAnimator="@drawable/spinner_sla"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
-
-            <Button
-                android:id="@+id/btLists"
-                android:layout_width="@dimen/button_width"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
-                android:layout_marginBottom="@dimen/vertical_margin_large"
-                android:layout_marginStart="@dimen/horizontal_margin_small"
-                android:paddingStart="@dimen/button_padding"
-                android:paddingEnd="@dimen/button_padding"
-                android:text="@string/lists"
-                android:textColor="@color/swipeSecondaryLightColor"
-                android:textSize="@dimen/button_text_size"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/btGroups"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvHeading"
                 app:layout_constraintBottom_toTopOf="@id/btDismiss"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
-
+                tools:ignore="RtlSymmetry" />
+            
             <Button
                 android:id="@+id/btDismiss"
                 android:layout_width="@dimen/button_width"
@@ -111,7 +103,7 @@
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btLists"
+                app:layout_constraintTop_toBottomOf="@id/smobShopLists"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 />
