--- a/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            tools:context="com.tanfra.shopmob.smob.ui.planning.shopList.PlanningShopEditFragment">
+            tools:context="com.tanfra.shopmob.smob.ui.planning.shop.PlanningShopEditFragment">
 
 
             <EditText
