--- a/code/app/src/main/res/layout/fragment_planning_shop_list.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_list.xml
@@ -7,14 +7,14 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tanfra.shopmob.smob.ui.planning.productList.PlanningProductListViewModel" />
+            type="com.tanfra.shopmob.smob.ui.planning.PlanningProductListViewModel" />
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/rlPlanningShopList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="com.tanfra.shopmob.smob.ui.planning.shopList.PlanningShopListFragment">
+        tools:context="com.tanfra.shopmob.smob.ui.planning.shop.PlanningShopListFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
