--- a/code/app/src/main/res/values/dimens.xml
+++ b/code/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="label_text_size">18sp</dimen>
     <dimen name="table_text_size">10sp</dimen>
     <dimen name="image_header_height">120dp</dimen>
+    <dimen name="image_header_height_small">60dp</dimen>
     <dimen name="invisible_gap_details">30sp</dimen>
     <dimen name="button_width">200dp</dimen>
     <dimen name="button_height">50dp</dimen>
